feat: add API endpoint that gets active attempt ID
- also rename main.py -> api.py
